[package]
name = "ping"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = {version= "0.39.1", features=["default"]}
futures = "0.3.16"
env_logger = "0.9.0"
async-std = { version = "1.9.0", features=["attributes"]}
libp2p-swarm-derive= "0.24.0"
parking_lot = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.66"
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"